@@ -251,8 +251,8 @@ _dl_start_user:
 	subq	$2, $1, $2
 	s8addq	$1, $sp, $sp
 	stq	$2, 0($sp)
-	/* Load _dl_default_scope[2] into s1 to pass to _dl_init_next.  */
-0:	ldq	$10, _dl_default_scope+16
+	/* Load _dl_main_searchlist into s1 to pass to _dl_init_next.  */
+0:	ldq	$10, _dl_main_searchlist
 	/* Call _dl_init_next to return the address of an initializer
 	   function to run.  */
 1:	mov	$10, $16
