@@ -338,11 +338,11 @@ _dl_start_user:
 	stx	%i4, [%i1+8]
 	brnz,pt	%i3, 13b
 	 add	%i1, 16, %i1
-   /* Load _dl_default_scope[2] to pass to _dl_init_next.  */
-2:	sethi	%hi(_dl_default_scope), %g2
-	or	%g2, %lo(_dl_default_scope), %g2
+   /* Load _dl_main_searchlist to pass to _dl_init_next.  */
+2:	sethi	%hi(_dl_main_searchlist), %g2
+	or	%g2, %lo(_dl_main_searchlist), %g2
 	ldx	[%l7+%g2], %g2
-	ldx	[%g2+2*8], %l1
+	ldx	[%g2], %l1
    /* Call _dl_init_next to return the address of an initializer to run.  */
 3:	call	_dl_init_next
 	 mov	%l1, %o0
